--- a/app/views/group_banners/_form.html.erb
+++ b/app/views/group_banners/_form.html.erb
@@ -31,7 +31,7 @@
   <hr/>
   <p>nuova versione banners e immagine</p>
 
-  <p> <%= f.select(:posizione, ['block_l', 'block_s', 'tramenu'], {}, {:class => '', :label => :field_posizione}) %></p>
+  <p> <%= f.select(:posizione, ['associazione','block_l', 'block_s', 'tramenu'], {}, {:class => '', :label => :field_posizione}) %></p>
 
   <p><%= f.file_field :image, :label => :field_immagine %> </p>
   <p id="prev" style="max-height: 300px;"> <%= image_tag @group_banner.image.url(:original) %>   </p>
