--- a/app/views/editorial/_quesito_reply.html.erb
+++ b/app/views/editorial/_quesito_reply.html.erb
@@ -2,7 +2,7 @@
     <article class="fs-article">
       <div class="fs-convegni-border">
         <div class="fs-quesiti-data-reply">  <span>
-           Risposta di: <%= articolo.author.firstname %></span>
+           Risposta di: <%= articolo.author %></span>
           <span class="fs-quesiti-data-data"><%= I18n.localize(articolo.created_on.to_date, :format => :giorno_mese_anno) %>&nbsp; </span>
         </div>
         <div  style="text-align: center; margin:10px;">
