static page progetto fs

--- a/app/views/editorial/pages_progetto-fs.html.erb
+++ b/app/views/editorial/pages_progetto-fs.html.erb
@@ -1,4 +1,4 @@
-static_page_lavoraconnoi<div class="fs-layout-cell fs-content clearfix" style="width: 100%; position:relative;">
+<div class="fs-layout-cell fs-content clearfix" style="width: 100%; position:relative;">
   <article class="fs-post fs-article">
     <div class="fs-postcontent fs-postcontent-0 clearfix">
       <div class="fs-content-layout">
@@ -15,5 +15,3 @@ static_page_lavoraconnoi<div class="fs-layout-cell fs-content clearfix" style="w
   <div class="clearfix"></div>
 </div>
 <%= render :partial => 'blocco_sidebar1' %>
-
-
