--- a/app/views/editorial/quesiti_all.html.erb
+++ b/app/views/editorial/quesiti_all.html.erb
@@ -11,7 +11,7 @@
                         <article class="fs-article">
                       <div class="fs-convegni-border">
                         <div class="fs-quesiti-data">  <span>
-                         Quesito di: <%= q.author unless !q.author %></span>
+                         <%= q.author.hide_name unless !q.author %>
                           <span class="fs-quesiti-data-data"><%= I18n.localize(q.created_on.to_date, :format => :giorno_mese_anno) %>&nbsp; </span>
                         </div>
                         <div class="fs-quesiti-wrapper">
