--- a/app/views/editorial/quesiti_my.html.erb
+++ b/app/views/editorial/quesiti_my.html.erb
@@ -10,7 +10,8 @@
             <% end %>
             <% @quesiti_news.each do |item| %>
                 <div class="fs-convegni-border">
-                  <div class="fs-quesiti-data">
+                  <div class="fs-quesiti-data">  <span>
+                         Quesito di: <%= item.author unless !item.author %></span>
                     <span class="fs-quesiti-data-data"><%= I18n.localize(item.created_on.to_date, :format => :giorno_mese_anno) %>&nbsp; </span>
                   </div>
                   <div class="fs-quesiti-list">
