--- a/app/views/previews/articolo.html.erb
+++ b/app/views/previews/articolo.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div style="width:100%;">
       <div class="fs-image-caption-wrapper-full">
-        <%= image_tag art_image(articolo, :l) %>
+        <%= image_tag art_image(@articolo, :l) %>
       </div>
       <div class="fs-postmetadata-full">
         <div class="fs-author">
