--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -935,6 +935,7 @@ padding-bottom: 3px;
 .icon-zoom-in { background-image: url(../images/zoom_in.png); }
 .icon-zoom-out { background-image: url(../images/zoom_out.png); }
 .icon-passwd { background-image: url(../images/textfield_key.png); }
+.icon-preview { background-image: url(../images/magnifier.png); }
 
 .icon-file { background-image: url(../images/files/default.png); }
 .icon-file.text-plain { background-image: url(../images/files/text.png); }
@@ -1134,6 +1135,9 @@ div.asso-select{float:right; right:10px;}
     margin: auto;
     display: block;
     max-width: 355px;
+}
+.prev_browse{
+  padding-left: 80px;
 }
 .splitcontents-3box p {
     width: 100%;
