multipe fixes and paperclip refresh

--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -3,7 +3,7 @@
 <head><!-- Created by DomThu & SPecchiaSoft -->
    <meta charset="utf-8"/>
   <title>FiscoSport (v0.1.2 beta) <%= h html_title %></title>
-  <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0, user-scalable = no, width = device-width"/>
+  <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 2.5, user-scalable = yes, width = device-width"/>
   <meta name="description" content="<%= Redmine::Info.app_name %>"/>
   <meta name="keywords" content="editoriale, notizie sport, fiscale, info, fiscosport"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -33,7 +33,7 @@
 
   <%= javascript_include_tag "jquery.js"%>
   <%#= javascript_include_tag "jquery/jquery-1.7.1.min.js" %>
-  <%= yield :header_yui -%>
+  <% #= yield :header_yui -%>
   <%#= javascript_include_tag "jquery/jquery-1.7.1.min.js" %>
   <%# javascript_include_tag "jquery/jquery-1.9.1.min.js" %>
   <%# javascript_include_tag "jquery/jquery-ui-1.8.23.custom.min.js" %>
