--- a/app/views/editorial/_reservation.html.erb
+++ b/app/views/editorial/_reservation.html.erb
@@ -1,34 +1,39 @@
 <% if (@reservation.nil?) %>
-    <% form_for(@reservation_new) do |f| %>
+    <% form_tag({:controller => "editorial", :action => "evento_prenotazione"}) do %>
         <%# back_url_hidden_field_tag %>
         <%# f.hidden_field :back_url, {:value => @backurl} %>
         <%# Non usiamo f.hidden_field perchè ci sposta il params sotto il params["@reservation_new"] %>
         <%= hidden_field_tag "back_url", @backurl %>
-        <h4> Partecipa a questo evento </h4>
-        <%= f.submit 'Prenota!', :class => "fs-blu-button" %>
-        <%= f.error_messages %>
-        <%= f.hidden_field :user_id, {:value => User.current.id} %>
-        <%= f.hidden_field :issue_id, {:value => @convegno.id} %>
-        <p>Numero persone
-          <%= f.text_field :num_persone, {:value => 1} %>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Messaggio (opzionale)
-          <%= f.text_area :msg %>
-        </p>
+
+        <div class="fs-reservation-header">  Partecipa a questo evento </div>
+        <div id="fs-reservation">
+        <%# f.error_messages %>
+        <%= hidden_field_tag :user_id, User.current.id.to_s %>
+        <%= hidden_field_tag :issue_id, @convegno.id.to_s %>
+
+        <div id="fs-reservation-num"> &nbsp;&nbsp;&nbsp;&nbsp;Numero persone <%= text_field_tag :num_persone, 1 %>
+        </div>
+          <div id="fs-reservation-btn">
+        <%= submit_tag 'Prenota!', :class => "fs-blu-button" %></div>
+        <div id="fs-reservation-msg">  &nbsp;&nbsp;&nbsp;&nbsp; Messaggio (opzionale) <%= text_area_tag :msg %></div>
+          <div class="cleared"></div>
+        </div>
+
     <% end %>
 <% else %>
-    <h4> Grazie di aver già prenotato questo evento per
-      <%= @reservation.num_persone == 1 ? @reservation.num_persone.to_s + " persona." : @reservation.num_persone.to_s + " persone." %></h4>
-
+    <div  class="fs-reservation-header"> Grazie di aver già prenotato questo evento per
+      <%= @reservation.num_persone == 1 ? @reservation.num_persone.to_s + " persona." : @reservation.num_persone.to_s + " persone." %></div>
     <br/> &nbsp;
     <div id="fs-reservation-del">
-      Non desideri più partecipare? &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    <div>
-      <% form_tag( {:controller=>"editorial", :action=>"evento_prenotazione_delete", :id =>  @reservation.id }) do %>
-          <%# hidden_field_tag "back_url", @backurl %>
-          <%= hidden_field_tag :back_url, @backurl %>
-          <%= submit_tag 'Cancella prenotazione!', :class => "fs-rosso-button", :confirm => 'Confermi?' %>
-          <%# link_to 'Cancella prenotazione!', '/reservations/'+ @reservation.id.to_s, :method => :delete, :class => "fs-rosso-button" %>
-      <% end %>
-    </div>
+      Non desideri più partecipare? &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <div>
+        <% form_tag({:controller => "editorial", :action => "evento_prenotazione_delete", :id => @reservation.id}) do %>
+            <%# hidden_field_tag "back_url", @backurl %>
+            <%= hidden_field_tag :back_url, @backurl %>
+            <%= submit_tag 'Cancella prenotazione!', :class => "fs-rosso-button", :confirm => 'Confermi?' %>
+            <%# link_to 'Cancella prenotazione!', '/reservations/'+ @reservation.id.to_s, :method => :delete, :class => "fs-rosso-button" %>
+        <% end %>
+      </div>
     </div>
     <br/> &nbsp;
 <% end %>
