--- a/app/views/editorial/evento.html.erb
+++ b/app/views/editorial/evento.html.erb
@@ -19,24 +19,27 @@
                   </div>
                 </div>
               </div>
+              <div class="counter-bg-fade2"></div>
               <div class="fs-postmetadataheader">
                 <div class="fs-postheader-eventi-full">
                   <%= @convegno.subject %>  </div>
               </div>
-              <div class="counter-bg-fade2"></div>
               <div style="width:100%;">
                 <div class="fs-image-caption-wrapper-convegni">
                   <%= image_tag art_image(@convegno, :l) %>
                 </div>
-                <div class="fs-riassunto-full"><p>
-                  <%= h(smart_truncate(@convegno.summary, 200)) %></p>
-                </div>
+                <% unless @convegno.hide_summary? %>
+                    <div class="fs-riassunto-full"><p>
+                      <%= @convegno.summary %></p>
+                    </div>
+                <% end %>
               </div>
               <div class="clearfix"></div>
               <div class="fs-layout-cell layout-item-1">
-               <div id="fs-articolo-full">
-                <%= @convegno.description %><br/>&nbsp;
-                 </div>
+                <div id="fs-articolo-full">
+                  <%= @convegno.description %>
+                  <br/>&nbsp;
+                </div>
               </div>
               <div class="fs-postmetadata-full-convegni">
                 <div class='fs-social'>
@@ -66,14 +69,16 @@
                     </div>
                   </div>
                   <div class="fs-resize-box">
-                    <%=  link_to_function( image_tag('ico/printer-icon.png'), "javascript:print()") %>
+                    <%= link_to_function(image_tag('ico/printer-icon.png'), "javascript:print()") %>
                   </div>
-                        </div>
+                </div>
                 <%# link_to image_tag('/images/ico/facebook64.png'), 'http://www.facebook.com/sharer.php?u='+request.fullpath, :target => :blank %>
               </div>
-              <div class="fs-convegni-prenota">
-                <%= render :partial => 'reservation' %>
-              </div>
+              <% if  @convegno.show_reservation? %>
+                  <div class="fs-convegni-prenota">
+                    <%= render :partial => 'reservation' %>
+                  </div>
+              <% end %>
 
           <% else %>
               <br/>
