--- a/app/views/settings/_display.html.erb
+++ b/app/views/settings/_display.html.erb
@@ -1,22 +1,42 @@
 <% form_tag({:action => 'edit', :tab => 'display'}) do %>
 
-<div class="box tabular settings">
-<p><%= setting_select :ui_theme, Redmine::Themes.themes.collect {|t| [t.name, t.id]}, :blank => :label_default, :label => :label_theme %></p>
+    <div class="box tabular settings">
+      <p><%= setting_select :ui_theme, Redmine::Themes.themes.collect { |t| [t.name, t.id] }, :blank => :label_default, :label => :label_theme %></p>
 
-<p><%= setting_select :default_language, lang_options_for_select(false) %></p>
+      <p><%= setting_select :default_language, lang_options_for_select(false) %></p>
 
-<p><%= setting_select :start_of_week, [[day_name(1),'1'], [day_name(6),'6'], [day_name(7),'7']], :blank => :label_language_based %></p>
+      <p><%= setting_select :start_of_week, [[day_name(1), '1'], [day_name(6), '6'], [day_name(7), '7']], :blank => :label_language_based %></p>
 
-<p><%= setting_select :date_format, Setting::DATE_FORMATS.collect {|f| [Date.today.strftime(f), f]}, :blank => :label_language_based %></p>
+      <p><%= setting_select :date_format, Setting::DATE_FORMATS.collect { |f| [Date.today.strftime(f), f] }, :blank => :label_language_based %></p>
 
-<p><%= setting_select :time_format, Setting::TIME_FORMATS.collect {|f| [Time.now.strftime(f), f]}, :blank => :label_language_based %></p>
+      <p><%= setting_select :time_format, Setting::TIME_FORMATS.collect { |f| [Time.now.strftime(f), f] }, :blank => :label_language_based %></p>
 
-<p><%= setting_select :user_format, @options[:user_format] %></p>
+      <p><%= setting_select :user_format, @options[:user_format] %></p>
 
-<p><%= setting_check_box :gravatar_enabled %></p>
+      <p><%= setting_check_box :gravatar_enabled %></p>
 
-<p><%= setting_select :gravatar_default, [["Wavatars", 'wavatar'], ["Identicons", 'identicon'], ["Monster ids", 'monsterid'], ["Retro", 'retro'], ["Mystery man", 'mm']], :blank => :label_none %></p>
-</div>
+      <p><%= setting_select :gravatar_default, [["Wavatars", 'wavatar'], ["Identicons", 'identicon'], ["Monster ids", 'monsterid'], ["Retro", 'retro'], ["Mystery man", 'mm']], :blank => :label_none %></p>
+      <br/>
 
-<%= submit_tag l(:button_save) %>
+      <p>User Profiles (Avatar)
+        -  <%= link_to('Rigenera le immagini!', url_for(:controller => "settings", :action => "img_refresh_users")) %>  </p>
+
+      <p>Associazioni
+        -  <%= link_to('Rigenera le immagini!', url_for(:controller => "settings", :action => "img_refresh_assos")) %>  </p>
+
+      <p>Organismi
+        -  <%= link_to('Rigenera le immagini!', url_for(:controller => "settings", :action => "img_refresh_org")) %>  </p>
+
+      <p>Top Sezioni (Categorie)
+        -  <%= link_to('Rigenera le immagini!', url_for(:controller => "settings", :action => "img_refresh_tsection")) %>  </p>
+
+      <p>Sezioni
+        -  <%= link_to('Rigenera le immagini!', url_for(:controller => "settings", :action => "section")) %>  </p>
+
+      <p>Articoli
+        -  <%= link_to('Rigenera le immagini!', url_for(:controller => "settings", :action => "img_refresh_issues")) %>  </p>
+
+    </div>
+
+    <%= submit_tag l(:button_save) %>
 <% end %>
